--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -13,7 +13,7 @@
 
   <!-- Sidebar -->
   <div class="admin-sidebar">
-    <h2>Élan Mode — Admin</h2>
+    <h2> MARIAH-STORE — Admin</h2>
     <a href="#" onclick="showSection('dashboard')" class="active">📊 Dashboard</a>
     <a href="#" onclick="showSection('produtos')">👗 Produtos</a>
     <a href="#" onclick="showSection('fornecedores')">🏭 Fornecedores</a>
