--- a/src/main/resources/static/carrinho.html
+++ b/src/main/resources/static/carrinho.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carrinho — Élan Mode</title>
+  <title>Carrinho — MARIAH-STORE</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -23,9 +23,9 @@
     </div>
   </div>
 
-  <!-- HEADER -->
+  
   <header class="header">
-    <h1>Élan Mode</h1>
+    <h1>MARIAH-STORE</h1>
     <p>Seu carrinho</p>
   </header>
 
@@ -42,7 +42,7 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>&copy; 2025 Élan Mode — Moda com impacto social.</p>
+    <p>&copy; 2025 MARIAH-STORE — Moda com impacto social.</p>
   </footer>
 
   <script>
