--- a/src/main/resources/static/perfil.html
+++ b/src/main/resources/static/perfil.html
@@ -10,7 +10,7 @@
 <header class="header header-perfil">
   <a href="index.html" class="btn-voltar">← Página inicial</a>
 
-  <h1>Élan Mode</h1>
+  <h1>MARIAH-STORE</h1>
   <p>Sua conta, seus dados, seu estilo.</p>
 </header>
 
@@ -29,11 +29,10 @@
     <div id="conteudo-pedidos" class="tab-content active">
       <h2>Meus Pedidos</h2>
       <div id="lista-pedidos">
-        <!-- Pedidos carregados via script -->
+        
       </div>
     </div>
 
-    <!-- Aba: Dados Pessoais -->
     <div id="conteudo-dados" class="tab-content">
       <h2>Dados Pessoais</h2>
 
@@ -62,13 +61,13 @@
   </main>
 
   <footer class="footer">
-    <p>&copy; 2025 Élan Mode — Moda com impacto social.</p>
+    <p>&copy; 2025 MARIAH-STORE — Moda com impacto social.</p>
   </footer>
 
 <script>
 document.addEventListener('DOMContentLoaded', async function () {
 
-  // 1. Verifica login
+  
   const userId = localStorage.getItem('loggedInUserId');
   if (!userId) {
     alert('Você precisa estar logado.');
@@ -76,7 +75,7 @@ document.addEventListener('DOMContentLoaded', async function () {
     return;
   }
 
-  // 2. Carregar dados reais do cliente
+ 
   async function carregarDadosCliente() {
     try {
       const response = await fetch(`http://localhost:8080/clientes/${userId}`);
@@ -90,7 +89,6 @@ document.addEventListener('DOMContentLoaded', async function () {
 
       const cliente = await response.json();
 
-      // Preenche os campos do formulário
       document.getElementById("nome").value = cliente.nome;
       document.getElementById("email").value = cliente.email;
       document.getElementById("telefone").value = cliente.telefone || "";
@@ -103,7 +101,6 @@ document.addEventListener('DOMContentLoaded', async function () {
 
   await carregarDadosCliente();
 
-  // 3. Abas do perfil
   const tabPedidos = document.getElementById("tab-pedidos");
   const tabDados = document.getElementById("tab-dados");
   const conteudoPedidos = document.getElementById("conteudo-pedidos");
@@ -123,7 +120,7 @@ document.addEventListener('DOMContentLoaded', async function () {
     conteudoPedidos.classList.remove("active");
   };
 
-  // 4. Atualizar dados (PUT /clientes/{id})
+ 
   document.getElementById("form-dados").onsubmit = async function (e) {
     e.preventDefault();
 
@@ -162,7 +159,7 @@ document.addEventListener('DOMContentLoaded', async function () {
     window.location.href = "index.html";
   };
 
-  // 6. Pedidos (a função original permanece)
+  
   function formatarMoeda(valor) {
     var str = valor.toFixed(2);
     var partes = str.split(".");
