--- a/src/main/resources/static/cadastro.html
+++ b/src/main/resources/static/cadastro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cadastro — Élan Mode</title>
+  <title>Cadastro — MARIAH-STORE</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="login-page">
