--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login — Élan Mode</title>
+  <title>Login — MARIAH-STORE</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="login-page">
@@ -72,7 +72,7 @@
           return;
         }
 
-        // LOGIN OK
+        
         localStorage.setItem("loggedInUser", data.nome);
         localStorage.setItem("loggedInUserId", data.id);
 
