--- a/src/main/resources/static/carrinho.html
+++ b/src/main/resources/static/carrinho.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carrinho — Élan Mode</title>
+  <title>Carrinho — Mariah store</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <!-- TOAST -->
+  
   <div id="toast" class="toast"></div>
 
-  <!-- NAV SUPERIOR (NOVO HEADER) -->
+ 
   <div class="top-nav">
     <a href="index.html" class="nav-btn">← Voltar</a>
 
@@ -23,13 +23,13 @@
     </div>
   </div>
 
-  <!-- HEADER -->
+  
   <header class="header">
     <h1>Élan Mode</h1>
     <p>Seu carrinho</p>
   </header>
 
-  <!-- MAIN -->
+ 
   <main class="main-container">
 
     <div id="cart-content"></div>
@@ -40,9 +40,9 @@
 
   </main>
 
-  <!-- FOOTER -->
+
   <footer class="footer">
-    <p>&copy; 2025 Élan Mode — Moda com impacto social.</p>
+    <p>&copy; 2025 Mariah store — Moda com impacto social.</p>
   </footer>
 
   <script>
